objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>PO_Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_SalesPrice__c</fullName>
        <label>SalesPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductsOpportunity__c</fullName>
        <formula>Text(PricebookEntry.Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductsOpportunity</label>
        <type>Text</type>
    </fields>
</CustomObject>